--- a/CoreKit/Config.xcconfig
+++ b/CoreKit/Config.xcconfig
@@ -2,10 +2,10 @@
 //  Config.xcconfig
 //  MovieNight
 //
-//  Created by Mostafa Mahmoud on 29/03/2024.
+//  Created by Mostafa Mahmoud on 30/03/2024.
 //
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-API_KEY = eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI4OTM4NjRkMDI0N2Y0YjA2NzA4NmY0ZWExYzBiNTI4OSIsInN1YiI6IjYxYWJjZjFiYWE2NTllMDA0MDQzOGFlZiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.MaBa0n0i7Zaz-42cito5Ks-AwNDsyVqxGNCwuyYZPXo
+API_KEY = 893864d0247f4b067086f4ea1c0b5289
