adding file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 MovieNight.xcodeproj/project.xcworkspace/xcuserdata/mtor.xcuserdatad/UserInterfaceState.xcuserstate
 CoreKit/Config.xcconfig
+MovieNight.xcodeproj/xcuserdata/mtor.xcuserdatad/xcschemes/xcschememanagement.plist
